examples/out/01980904-ebfc-7abc-be9d-e5e34962b3f9/log_dora-amiga-camera.txt
Traceback (most recent call last):
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/.venv/lib/python3.11/site-packages/google/protobuf/json_format.py", line 576, in _ConvertFieldValuePair
    raise ParseError(
google.protobuf.json_format.ParseError: Message type "farm_ng.core.proto.EventServiceConfig" has no field named "configs" at "EventServiceConfig".
 Available Fields(except extensions): "['name', 'port', 'host', 'subscriptions', 'uris', 'args', 'logLevel']"

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/.venv/bin/dora-amiga-camera", line 8, in <module>
    sys.exit(main())
             ^^^^^^
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/dora_amiga/camera.py", line 59, in main
    asyncio.run(run_camera_bridge())
  File "/mnt/managed_home/farm-ng-user-edgar/.local/share/uv/python/cpython-3.11.12-linux-aarch64-gnu/lib/python3.11/asyncio/runners.py", line 190, in run
    return runner.run(main)
           ^^^^^^^^^^^^^^^^
  File "/mnt/managed_home/farm-ng-user-edgar/.local/share/uv/python/cpython-3.11.12-linux-aarch64-gnu/lib/python3.11/asyncio/runners.py", line 118, in run
    return self._loop.run_until_complete(task)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/managed_home/farm-ng-user-edgar/.local/share/uv/python/cpython-3.11.12-linux-aarch64-gnu/lib/python3.11/asyncio/base_events.py", line 654, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/dora_amiga/camera.py", line 23, in run_camera_bridge
    config: EventServiceConfig = proto_from_json_file(service_config_path, EventServiceConfig())
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/.venv/lib/python3.11/site-packages/farm_ng/core/events_file_reader.py", line 56, in proto_from_json_file
    return json_format.ParseDict(json_pb, empty_proto_message)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/.venv/lib/python3.11/site-packages/google/protobuf/json_format.py", line 486, in ParseDict
    parser.ConvertMessage(js_dict, message, '')
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/.venv/lib/python3.11/site-packages/google/protobuf/json_format.py", line 531, in ConvertMessage
    self._ConvertFieldValuePair(value, message, path)
  File "/mnt/managed_home/farm-ng-user-edgar/amiga-dora-bridge/.venv/lib/python3.11/site-packages/google/protobuf/json_format.py", line 687, in _ConvertFieldValuePair
    raise ParseError(str(e)) from e
google.protobuf.json_format.ParseError: Message type "farm_ng.core.proto.EventServiceConfig" has no field named "configs" at "EventServiceConfig".
 Available Fields(except extensions): "['name', 'port', 'host', 'subscriptions', 'uris', 'args', 'logLevel']"
